- fixed some typos

--- a/development.html
+++ b/development.html
@@ -34,7 +34,7 @@ make</code></pre>
 
   <h3>Required packages</h3>
 
-  <p>To build snapper you will need at least: autoconf, automake, boost-devel,
+  <p>To build snapper, you will need at least: autoconf, automake, boost-devel,
   dbus-1-devel, docbook-xsl-stylesheets, gettext-tools, gcc-c++, libtool,
   libxml2-devel, make, pam-devel (for optional PAM module), xsltproc</p>
 
