--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ social: true
 
       <h2>Watch it in action</h2>
 
-      <p>Greg Kroah-Hartman and Matthias Eckermann play sysadmins and screw a web server configuration.</p>
+      <p>Greg Kroah-Hartman and Matthias Eckermann play sysadmins and ruin a web server configuration.</p>
 
       <p><a href="http://www.youtube.com/v/9H7e6BcI5Fo?start=209">
           <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/9H7e6BcI5Fo/1.jpg?start=209) center center black;" alt=""/>
