--- a/overview.html
+++ b/overview.html
@@ -7,7 +7,7 @@ piwik: true
   <h2>Overview</h2>
 
   <p>Snapper is a tool for Linux filesystem snapshot management. Apart from
-  the obvious creation and deletion of snapshots it can compare snapshots and
+  the obvious creation and deletion of snapshots, it can compare snapshots and
   revert differences between snapshots. In simple terms, this allows root and
   non-root users to view older versions of files and revert changes.</p>
 
