--- a/videos.html
+++ b/videos.html
@@ -8,7 +8,7 @@ piwik: true
 
   <h3>General</h3>
 
-  <p>Greg Kroah-Hartman and Matthias Eckermann play sysadmins and screw a web
+  <p>Greg Kroah-Hartman and Matthias Eckermann play sysadmins and ruin a web
   server configuration.</p>
 
   <p><a href="http://www.youtube.com/v/9H7e6BcI5Fo?start=209">
