--- a/manpages/snapper.html
+++ b/manpages/snapper.html
@@ -41,7 +41,7 @@
         <div class="refsect2">
           <a id="configurations"></a>
           <h3>Configurations</h3>
-          <p>For each filesystem or subvolume that should be snapshotted by snapper a
+          <p>For each filesystem or subvolume that should be snapshotted by snapper, a
       configuration file is required. The complete setup can be done with the
       create-config command.</p>
         </div>
@@ -95,7 +95,7 @@
         <div class="refsect2">
           <a id="cleanup_algorithms"></a>
           <h3>Cleanup Algorithms</h3>
-          <p>Snapper provides several algorithms to cleanup old snapshots. The
+          <p>Snapper provides several algorithms to clean up old snapshots. The
       algorithms are executed in a daily cron-job. This can be configured in the
       corresponding configurations files along with parameters for every
       algorithm.</p>
@@ -170,7 +170,7 @@
       <div class="refsect1">
         <a id="commands"></a>
         <h2>COMMANDS</h2>
-        <p>snapper provides a number of <span class="emphasis"><em>commands</em></span>. Each
+        <p>Snapper provides a number of <span class="emphasis"><em>commands</em></span>. Each
     command accepts the options listed in the <a class="link" href="#global_options" title="GLOBAL OPTIONS">GLOBAL OPTIONS</a> section. These options must
     be specified <span class="emphasis"><em>before</em></span> the command name. In addition,
     many commands have specific options, which are listed in this
@@ -461,7 +461,7 @@
         <a id="permissions"></a>
         <h2>PERMISSIONS</h2>
         <p>Non-root users can be allowed to use a configuration by setting
-    ALLOW_USERS or ALLOW_GROUPS in the config file. For all operations to work the
+    ALLOW_USERS or ALLOW_GROUPS in the config file. For all operations to work, the
     user must also be able to read and access the <code class="filename">.snapshots</code>
     directory inside the subvolume. The <code class="filename">.snapshots</code> directory
     must be owned by root and must not be writable by anybody else.</p>
