--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@ social: true
     </div>
 
     <div class="span8">
-      <p class=""><cite>Thanks to Snapper, you can mess up system configuration changes or package installations or updates without having to restore from an old backup and risking to lose some files. Just revert to the snapshot before your problematic change and you’re fine. <i><a href="http://www.linuxuser.co.uk/reviews/suse-linux-enterprise-server-11-sp2-review/">Linux User & Developer Magazine</a></i></cite></p>
+      <p class=""><cite>&quot;Thanks to Snapper, you can mess up system
+      configuration changes or package installations or updates without having
+      to restore from an old backup and risking to lose some files. Just
+      revert to the snapshot before your problematic change and you’re
+      fine.&quot; <i><a href="http://www.linuxuser.co.uk/reviews/suse-linux-enterprise-server-11-sp2-review/">Linux
+      User & Developer Magazine</a></i></cite></p>
     </div>
   </div>
 
