--- a/overview.html
+++ b/overview.html
@@ -19,11 +19,11 @@ piwik: true
     </li>
 
     <li>
-      <p>Automatic create snapshots, e.g. with YaST and zypp</p>
+      <p>Automatically create snapshots, e.g. with YaST and zypp</p>
     </li>
 
     <li>
-      <p>Automatic create timeline of snapshots</p>
+      <p>Automatically create timeline of snapshots</p>
     </li>
 
     <li>
