--- a/documentation.html
+++ b/documentation.html
@@ -11,6 +11,7 @@ piwik: true
   <ul>
     <li><a href="manpages/snapper.html">snapper</a></li>
     <li><a href="manpages/snapperd.html">snapperd</a></li>
+    <li><a href="manpages/snapper-configs.html">snapper-configs</a></li>
     <li><a href="manpages/pam_snapper.html">pam_snapper</a></li>
   </ul>
 
