--- a/manpages/snapper.html
+++ b/manpages/snapper.html
@@ -587,6 +587,7 @@
         <h2>SEE ALSO</h2>
         <p>
       <span class="citerefentry"><span class="refentrytitle">snapper-configs</span>(5)</span>,
+      <span class="citerefentry"><span class="refentrytitle">pam_snapper</span>(8)</span>,
       <span class="citerefentry"><span class="refentrytitle">btrfs</span>(8)</span>,
       <span class="citerefentry"><span class="refentrytitle">lvm</span>(8)</span>,
       <span class="citerefentry"><span class="refentrytitle">attr</span>(5)</span>
