--- a/documentation.html
+++ b/documentation.html
@@ -13,6 +13,8 @@ piwik: true
     <li><a href="manpages/snapperd.html">snapperd</a></li>
     <li><a href="manpages/snapper-configs.html">snapper-configs</a></li>
     <li><a href="manpages/pam_snapper.html">pam_snapper</a></li>
+    <li><a href="manpages/snapper-zypp-plugin.html">snapper-zypp-plugin</a></li>
+    <li><a href="manpages/snapper-zypp-plugin.conf.html">snapper-zypp-plugin.conf</a></li>
   </ul>
 
   <h3>Blogs</h3>
