--- a/manpages/snapper-configs.html
+++ b/manpages/snapper-configs.html
@@ -57,6 +57,8 @@
               <p>List of users allowed to operate with the config. The user-names
 	  must be separated by spaces. Spaces in usernames can be escaped with a
 	  "\".</p>
+              <p>Also see the PERMISSONS section in
+	  <span class="citerefentry"><span class="refentrytitle">snapper</span>(8)</span>.</p>
               <p>Default value is "" but "root" is always
 	  implicitly included.</p>
             </dd>
@@ -69,7 +71,23 @@
               <p>List of groups allowed to operate with the config. The group-names
 	  must be separated by spaces. Spaces in group-names can be escaped with a
 	  "\".</p>
+              <p>Also see the PERMISSONS section in
+	  <span class="citerefentry"><span class="refentrytitle">snapper</span>(8)</span>.</p>
               <p>Default value is "".</p>
+            </dd>
+            <dt>
+              <span class="term">
+                <code class="option">SYNC_ACL=<em class="replaceable"><code>boolean</code></em></code>
+              </span>
+            </dt>
+            <dd>
+              <p>Defines whether snapper will sync the users and groups from
+	  ALLOW_USERS and ALLOW_GROUPS to the ACL of the <code class="filename">.snapshots</code>
+	  directory.</p>
+              <p>Also see the PERMISSONS section in
+	  <span class="citerefentry"><span class="refentrytitle">snapper</span>(8)</span>.</p>
+              <p>Default value is "no".</p>
+              <p>New in version 0.2.0.</p>
             </dd>
             <dt>
               <span class="term">
