--- a/manpages/pam_snapper.html
+++ b/manpages/pam_snapper.html
@@ -178,7 +178,7 @@ session    optional    pam_snapper.so
         <a id="see_also"></a>
         <h2>SEE ALSO</h2>
         <p>
-      <span class="citerefentry"><span class="refentrytitle">snapper</span>(8)</span>,
+      <a class="citerefentry" href="snapper.html"><span class="citerefentry"><span class="refentrytitle">snapper</span>(8)</span></a>,
       <span class="citerefentry"><span class="refentrytitle">pam.conf</span>(5)</span>,
       <span class="citerefentry"><span class="refentrytitle">pam</span>(8)</span>,
       pam_snapper_homeconvert,
