--- a/manpages/snapper-configs.html
+++ b/manpages/snapper-configs.html
@@ -58,7 +58,7 @@
 	  must be separated by spaces. Spaces in usernames can be escaped with a
 	  "\".</p>
               <p>Also see the PERMISSONS section in
-	  <span class="citerefentry"><span class="refentrytitle">snapper</span>(8)</span>.</p>
+	  <a class="citerefentry" href="snapper.html"><span class="citerefentry"><span class="refentrytitle">snapper</span>(8)</span></a>.</p>
               <p>Default value is "" but "root" is always
 	  implicitly included.</p>
             </dd>
@@ -72,7 +72,7 @@
 	  must be separated by spaces. Spaces in group-names can be escaped with a
 	  "\".</p>
               <p>Also see the PERMISSONS section in
-	  <span class="citerefentry"><span class="refentrytitle">snapper</span>(8)</span>.</p>
+	  <a class="citerefentry" href="snapper.html"><span class="citerefentry"><span class="refentrytitle">snapper</span>(8)</span></a>.</p>
               <p>Default value is "".</p>
             </dd>
             <dt>
@@ -85,7 +85,7 @@
 	  ALLOW_USERS and ALLOW_GROUPS to the ACL of the <code class="filename">.snapshots</code>
 	  directory.</p>
               <p>Also see the PERMISSONS section in
-	  <span class="citerefentry"><span class="refentrytitle">snapper</span>(8)</span>.</p>
+	  <a class="citerefentry" href="snapper.html"><span class="citerefentry"><span class="refentrytitle">snapper</span>(8)</span></a>.</p>
               <p>Default value is "no".</p>
               <p>New in version 0.2.0.</p>
             </dd>
@@ -256,8 +256,8 @@
         <a id="see_also"></a>
         <h2>SEE ALSO</h2>
         <p>
-      <span class="citerefentry"><span class="refentrytitle">snapper</span>(8)</span>,
-      <span class="citerefentry"><span class="refentrytitle">snapperd</span>(8)</span>
+      <a class="citerefentry" href="snapper.html"><span class="citerefentry"><span class="refentrytitle">snapper</span>(8)</span></a>,
+      <a class="citerefentry" href="snapperd.html"><span class="citerefentry"><span class="refentrytitle">snapperd</span>(8)</span></a>
     </p>
       </div>
     </div>
