--- a/manpages/snapper-zypp-plugin.conf.html
+++ b/manpages/snapper-zypp-plugin.conf.html
@@ -38,7 +38,7 @@
         <a id="see_also"></a>
         <h2>SEE ALSO</h2>
         <p>
-      <span class="citerefentry"><span class="refentrytitle">snapper-zypp-plugin</span>(8)</span>
+      <a class="citerefentry" href="snapper-zypp-plugin.html"><span class="citerefentry"><span class="refentrytitle">snapper-zypp-plugin</span>(8)</span></a>
     </p>
       </div>
     </div>
