--- a/manpages/snapper-zypp-plugin.html
+++ b/manpages/snapper-zypp-plugin.html
@@ -53,8 +53,8 @@
         <a id="see_also"></a>
         <h2>SEE ALSO</h2>
         <p>
-      <span class="citerefentry"><span class="refentrytitle">snapper-zypp-plugin.conf</span>(5)</span>,
-      <span class="citerefentry"><span class="refentrytitle">snapper</span>(8)</span>,
+      <a class="citerefentry" href="snapper-zypp-plugin.conf.html"><span class="citerefentry"><span class="refentrytitle">snapper-zypp-plugin.conf</span>(5)</span></a>,
+      <a class="citerefentry" href="snapper.html"><span class="citerefentry"><span class="refentrytitle">snapper</span>(8)</span></a>,
       <span class="citerefentry"><span class="refentrytitle">zypper</span>(8)</span>,
       <span class="citerefentry"><span class="refentrytitle">YaST</span>(8)</span>
     </p>
