--- a/manpages/snapper.html
+++ b/manpages/snapper.html
@@ -43,7 +43,7 @@
           <h3>Configurations</h3>
           <p>For each filesystem or subvolume that should be snapshotted by
       snapper, a configuration file is required, see
-      <span class="citerefentry"><span class="refentrytitle">snapper-configs</span>(5)</span>. The
+      <a class="citerefentry" href="snapper-configs.html"><span class="citerefentry"><span class="refentrytitle">snapper-configs</span>(5)</span></a>. The
       setup can be done with the create-config command.</p>
         </div>
         <div class="refsect2">
@@ -552,7 +552,7 @@
           </ul>
         </div>
         <p>The last method can be performed by snapper, see the SYNC_ACL setting in
-    <span class="citerefentry"><span class="refentrytitle">snapper-configs</span>(5)</span>.</p>
+    <a class="citerefentry" href="snapper-configs.html"><span class="citerefentry"><span class="refentrytitle">snapper-configs</span>(5)</span></a>.</p>
       </div>
       <div class="refsect1">
         <a id="files"></a>
@@ -629,8 +629,9 @@
         <a id="see_also"></a>
         <h2>SEE ALSO</h2>
         <p>
-      <span class="citerefentry"><span class="refentrytitle">snapper-configs</span>(5)</span>,
-      <span class="citerefentry"><span class="refentrytitle">pam_snapper</span>(8)</span>,
+      <a class="citerefentry" href="snapper-configs.html"><span class="citerefentry"><span class="refentrytitle">snapper-configs</span>(5)</span></a>,
+      <a class="citerefentry" href="snapper-zypp-plugin.html"><span class="citerefentry"><span class="refentrytitle">snapper-zypp-plugin</span>(8)</span></a>,
+      <a class="citerefentry" href="pam_snapper.html"><span class="citerefentry"><span class="refentrytitle">pam_snapper</span>(8)</span></a>,
       <span class="citerefentry"><span class="refentrytitle">btrfs</span>(8)</span>,
       <span class="citerefentry"><span class="refentrytitle">lvm</span>(8)</span>,
       <span class="citerefentry"><span class="refentrytitle">attr</span>(5)</span>,
