--- a/manpages/snapperd.html
+++ b/manpages/snapperd.html
@@ -42,7 +42,7 @@
         <a id="see_also"></a>
         <h2>SEE ALSO</h2>
         <p>
-      <span class="citerefentry"><span class="refentrytitle">snapper</span>(8)</span>,
+      <a class="citerefentry" href="snapper.html"><span class="citerefentry"><span class="refentrytitle">snapper</span>(8)</span></a>,
       <span class="citerefentry"><span class="refentrytitle">dbus-daemon</span>(1)</span>
     </p>
       </div>
