--- a/manpages/snapper-configs.html
+++ b/manpages/snapper-configs.html
@@ -180,7 +180,7 @@
             </dt>
             <dd>
               <p>Defines how many hourly snapshots the timeline cleanup
-	  algorithm should keep. An hourly snapshots is the first snapshot in an
+	  algorithm should keep. An hourly snapshot is the first snapshot in an
 	  hour. The youngest hourly snapshots will be kept.</p>
               <p>Default value is "10".</p>
             </dd>
@@ -191,7 +191,7 @@
             </dt>
             <dd>
               <p>Defines how many daily snapshots the timeline cleanup
-	  algorithm should keep. A daily snapshots is the first snapshot in a day. The
+	  algorithm should keep. A daily snapshot is the first snapshot in a day. The
 	  youngest daily snapshots will be kept.</p>
               <p>Default value is "10".</p>
             </dd>
@@ -201,9 +201,9 @@
               </span>
             </dt>
             <dd>
-              <p>Defines how many daily snapshots the timeline cleanup
-	  algorithm should keep. A daily snapshots is the first snapshot in a day. The
-	  youngest daily snapshots will be kept.</p>
+              <p>Defines how many monthly snapshots the timeline cleanup
+	  algorithm should keep. A monthly snapshot is the first snapshot in a month. The
+	  youngest monthly snapshots will be kept.</p>
               <p>Default value is "10".</p>
             </dd>
             <dt>
@@ -212,9 +212,9 @@
               </span>
             </dt>
             <dd>
-              <p>Defines how many daily snapshots the timeline cleanup
-	  algorithm should keep. A daily snapshots is the first snapshot in a day. The
-	  youngest daily snapshots will be kept.</p>
+              <p>Defines how many yearly snapshots the timeline cleanup
+	  algorithm should keep. A yearly snapshot is the first snapshot in a year. The
+	  youngest yearly snapshots will be kept.</p>
               <p>Default value is "10".</p>
             </dd>
             <dt>
