--- a/manpages/snapper.html
+++ b/manpages/snapper.html
@@ -525,8 +525,8 @@
                 <ul class="itemizedlist" style="list-style-type: disc; ">
                   <li class="listitem">
                     <p>Without a number, a first read-only snapshot of the
-	      default subvolume is created. A second read-write snapshot is created of the
-	      first snapshot. The system is set to boot from the second snapshot.</p>
+	      default subvolume is created. A second read-write snapshot of the current
+	      system is created. The system is set to boot from the second snapshot.</p>
                   </li>
                   <li class="listitem">
                     <p>With a number, a first read-only snapshot of the current
